--- a/src/ui/SettingsPanel.form
+++ b/src/ui/SettingsPanel.form
@@ -60,13 +60,11 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="volume" min="-2" pref="293" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                                  <Component id="car1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="car2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="car3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="car4" min="-2" max="-2" attributes="0"/>
-                                  <Component id="car5" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="car1" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="car2" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="car3" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="car4" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="car5" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="208" max="-2" attributes="0"/>
                       </Group>
@@ -219,12 +217,12 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="164" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="164" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
